syntax = "proto3";

import "google/protobuf/empty.proto"; 

message WriteBlockRequest {
    string name = 1;
    bytes data = 2;
}

message WriteBlockResponse {
    bool success = 1;
}

message ReadBlockRequest {
    string name = 1;
}

message ReadBlockResponse {
   repeated bytes data = 1;
}

message SendIndexRequest {
    string filename = 1;
} 

message Response {
    bool status = 1;
}

message Sended {
    bool sended = 1;
}

message SendDataRequest {
    repeated string list_data = 1; 
    string string_data1 = 2; 
    string string_data2 = 3; 
}

message SendDataResponse {
    bool success = 1;
}

service dataNode {
    rpc WriteBlock(WriteBlockRequest) returns (WriteBlockResponse) {}
    rpc ReadBlock(ReadBlockRequest) returns (ReadBlockResponse) {}
    rpc CheckStatus (google.protobuf.Empty) returns (Response) {}
    rpc SendIndex (SendIndexRequest) returns (Sended) {}
    rpc SendData (SendDataRequest) returns (SendDataResponse) {}
}
